[package]
name = "httprouter"
version = "0.5.0"
license = "MIT"
authors = ["ibraheem <ibrah1440@gmail.com>"]
edition = "2018"
description = "A high performance HTTP request router that scales well."
categories = ["web-programming::http-client", "network-programming", "algorithms"]
keywords = ["hyper", "path", "tree", "radix", "router"]
repository = "https://github.com/ibraheemdev/httprouter-rs/"
readme = "README.md"

[dependencies]
hyper = "0.14"
futures-util = { version = "0.3", default-features = false }
matchit = "0.3"

[dev-dependencies]
hyper = { version = "0.14", features = ["server", "http1", "tcp"] }
tokio = { version = "1.4", features = ["full"] }
